--- a/forget-password.html
+++ b/forget-password.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeCare-Register</title>
+    <title>WeCare-ForgetPS</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&family=Trispace:wght@100;200;300;400;500;600;700&display=swap');
 
@@ -47,7 +47,7 @@
             color: black;
             font-family: monospace;
             padding: 10px 20px;
-            border: 2px solid rgb(0, 0, 0);
+            border: 2px solid purple;
             border-radius: 12px;
             margin: 13px;
             box-shadow: 2px 5px 5px rgb(0, 0, 0);
@@ -97,38 +97,19 @@
 
 <body>
     <form method="post" action="./backend.php">
-        <h3>Please Fill Up The Register Form <br> <br> </h3>
-        <p id="aaa">
-            I Am <br>
-            <label for="doctor"><input type="radio" name="mediname" id="doctor">DOCTOR</label>
-            <label for="patient"><input type="radio" name="mediname" id="patient">PATIENT</label>
-        </p>
-        <p>
-            <input type="name" name="fname" id="fname" placeholder="First Name " required>
-        </p>
-        <p>
-            <input type="name" name="lname" id="lname" placeholder="Last Name " required>
-        </p>
-        <p>
-            <input type="address" name="address" id="address" placeholder="Current Address  ">
-        </p>
-        <p>
-            <input type="phone" name="phone" id="phone" placeholder="Phone No:  " required>
-        </p>
-        <p>
-            <input type="email" name="useremail" id="useremail" placeholder="Valid  Email" required>
-        </p>
-        <p id="aaa">
+        <h3>पासवर्ड सम्झने बानी बसाल्नुहोस् !!!<br> <br> </h3>
 
-            <label for="male"><input type="radio" name="gender" id="male">Male</label>
-            <label for="female"><input type="radio" name="gender" id="female">Female</label>
-            <label for="other"><input type="radio" name="gender" id="other">Other</label>
+        <p>
+            <input type="text" name="username" id="username" placeholder="User Name" required>
         </p>
         <p>
-            <input type="email" name="useremail" id="useremail" placeholder="UserName" required>
+            <input type="phone" name="phone" id="phone" placeholder="Phone No" required>
         </p>
         <p>
-            <input type="password" name="userpassword" id="userpassword" placeholder="Password" required>
+            <input type="email" name="useremail" id="useremail" placeholder="User Email" required>
+        </p>
+        <p>
+            <input type="password" name="userpassword" id="userpassword" placeholder="New-Password" required>
         </p>
         <p>
             <input type="password" name="userpassword" id="userpassword" placeholder="Re-Enter Password" required>
