--- a/Add-Reports.html
+++ b/Add-Reports.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Patients login</title>
+  <title>WeCare-DoctorView</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/78e6212ab3.js" crossorigin="anonymous"></script>
   <style>
-    input{
-      border: 2px solid green;
+    *{
+      margin: 0;
+      padding: 0;
     }
     .border-success {
   --bs-border-opacity: 1;
@@ -148,11 +149,6 @@
 
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 px-5 py-5 my-5 border-top bg-secondary">
       <div class="col mb-3">
-        <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
         <p class="text-muted">WeCare 2022 © All Rights Reserved</p>
       </div>
 
@@ -199,9 +195,6 @@
       </div>
     </footer>
   </div>
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
