--- a/Medi-Report.html
+++ b/Medi-Report.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Patients login</title>
+  <title>WeCare-DoctorMedi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/78e6212ab3.js" crossorigin="anonymous"></script>
   <style>
@@ -12,12 +12,22 @@
       color: purple !important;
     }
 
+    main {
+      /* background-image: url("./images/hospital.jpg"); */
+      /* background-position: center;
+      background-repeat: no-repeat; */
+
+    }
+
+    .album {
+      background-color: rgb(94, 93, 88);
+    }
   </style>
 </head>
 
 <body>
 
-  <header class="p-3 mb-3 border-bottom bg-success">
+  <header class="p-3 border-bottom bg-success">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -62,12 +72,12 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">WeCare:Medi-Reports</h1>
-          <p class="lead text-muted">Here You can add, delete and also modify your medical reports here . We WeCare
+          <h1 class="fw-light text-dark">WeCare:Medi-Reports</h1>
+          <p class="lead text-secondary">Here You can add, delete and also modify your medical reports here . We WeCare
             Member and management team take all responsibility to take care of all your reports . <br> Thank you!!!!!!!
           </p>
           <p>
-            <a href="#" class="btn btn-success my-2"><i class="fa-solid fa-plus"></i>Add Reports</a>
+            <a href="./Add-Reports.html" class="btn btn-success my-2"><i class="fa-solid fa-plus"></i>Add Reports</a>
             <a href="#" class="btn btn-danger my-2"><i class="fa-solid fa-minus"></i>Delete Reports</a>
           </p>
         </div>
@@ -77,8 +87,206 @@
     <div class="album py-5 bg-light">
       <div class="container">
 
+
+        <!-- pop ups model starts from here  -->
+        <!-- popups models starts from here -->
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Medical Report No 1 </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="card mb-3">
+                  <img src="./images/born-baby.jpg" height="600px" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Future Engineer</h5>
+                    <p class="card-text">“The difference between ordinary and extraordinary is that little extra And He
+                      is the one " --WeCare</p>
+
+
+                    <!-- all reports here  -->
+
+                    <form>
+                      <div class="form-group mt-3 ">
+                        <label for="exampleDataList" class="form-label">Patients's Username</label>
+                        <input class="form-control border border-2 border-success" list="datalistOptions"
+                          id="exampleDataList" name="dname" placeholder="Type Username to search..." readonly>
+
+
+
+                        <label for="exampleFormControlInput1">Patients's Email address</label>
+                        <input type="email" class="form-control border border-2 border-success"
+                          id="exampleFormControlInput1" placeholder="name@example.com" readonly>
+                      </div>
+                      <div class="form-group mt-3" aria-readonly="readonly">
+                        <label for="exampleFormControlSelect1">Witness(साक्षी) if Any </label>
+                        <select class="form-control border border-2 border-success" id="exampleFormControlSelect1"
+                          readonly>
+                          <option>No-one</option>
+                          <option>Father</option>
+                          <option>Mother</option>
+                          <option>Sister</option>
+                          <option>Brother</option>
+                          <option>Friends</option>
+                          <option>Staff</option>
+                          <option>Other</option>
+                        </select>
+                      </div>
+
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Symptoms Of The Patient</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Description Of The Disease</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="7" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Description Of Medicines</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Necessary Medical Reports</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Instruction Regarding Diet</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlInput1">Next Visit Date</label>
+                        <input type="datetime-local" class="form-control border border-2 border-success"
+                          id="exampleFormControlInput1" placeholder="dd/mm/yyyy" readonly>
+                      </div>
+
+                    </form>
+
+                    <!-- all reports end here  -->
+
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Understood</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- view ko lagi close here  -->
+
+        <!-- aba edit ko lagi start from here  -->
+
+
+        <!-- pop ups model starts from here  -->
+        <!-- popups models starts from here -->
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Medical Report No 1 </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="card mb-3">
+                  <img src="./images/born-baby.jpg" height="600px" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Future Engineer</h5>
+                    <p class="card-text">“The difference between ordinary and extraordinary is that little extra And He
+                      is the one " --WeCare</p>
+
+
+                    <!-- all reports here  -->
+
+                    <form>
+                      <div class="form-group mt-3 ">
+                        <label for="exampleDataList" class="form-label">Patients's Username</label>
+                        <input class="form-control border border-2 border-success" list="datalistOptions"
+                          id="exampleDataList" name="dname" placeholder="Type Username to search...">
+
+
+
+                        <label for="exampleFormControlInput1">Patients's Email address</label>
+                        <input type="email" class="form-control border border-2 border-success"
+                          id="exampleFormControlInput1" placeholder="name@example.com">
+                      </div>
+                      <div class="form-group mt-3" aria-readonly="readonly">
+                        <label for="exampleFormControlSelect1">Witness(साक्षी) if Any </label>
+                        <select class="form-control border border-2 border-success" id="exampleFormControlSelect1">
+                          <option>No-one</option>
+                          <option>Father</option>
+                          <option>Mother</option>
+                          <option>Sister</option>
+                          <option>Brother</option>
+                          <option>Friends</option>
+                          <option>Staff</option>
+                          <option>Other</option>
+                        </select>
+                      </div>
+
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Symptoms Of The Patient</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5"></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Description Of The Disease</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="7"></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Description Of Medicines</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Necessary Medical Reports</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5" readonly></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlTextarea1">Instruction Regarding Diet</label>
+                        <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1"
+                          rows="5"></textarea>
+                      </div>
+                      <div class="form-group mt-3">
+                        <label for="exampleFormControlInput1">Next Visit Date</label>
+                        <input type="datetime-local" class="form-control border border-2 border-success"
+                          id="exampleFormControlInput1" placeholder="dd/mm/yyyy">
+                      </div>
+
+                    </form>
+
+                    <!-- all reports end here  -->
+
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Update</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- edit ko lagi pani banda bayo yeha  -->
+
+
+
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-         
+
           <div class="col">
             <div class="card shadow-sm">
               <img class="bd-placeholder-img card-img-top" src="./images/born-baby.jpg" width="100%" height="325">
@@ -88,8 +296,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-info my-2" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">View</a>
+                    <a href="#" class="btn btn-outline-danger my-2" data-bs-toggle="modal"
+                      data-bs-target="#exampleModall">Edit</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -105,8 +315,12 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </a>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    </a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -122,8 +336,12 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </a>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    </a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -139,8 +357,12 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </a>
+                    <a href="#mymodel">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    </a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -247,8 +469,6 @@
       </div>
     </footer>
   </div>
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
