--- a/Register.html
+++ b/Register.html
@@ -5,99 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- custom stylesheet -->
+    <link rel="stylesheet" href="./Register.css">
+
+       <!-- favicon link here  -->
+       <link rel="shortcut icon" href="./images/mask-wali.jpg" type="image/x-icon">
     <title>WeCare-Register</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&family=Trispace:wght@100;200;300;400;500;600;700&display=swap');
-
-        form h3 {
-            color: aqua;
-            font-family: cursive;
-            font-size: 23px;
-            text-align: center;
-
-        }
-
-        form {
-            background: linear-gradient(to right, purple, rgb(255, 79, 48));
-            /* background-image: url("images/device.jpg");
-            background-repeat: no-repeat;
-            background-position: center;
-            object-fit: cover; */
-            display: block;
-            justify-content: center;
-            text-align: center;
-            margin: 45px 120px;
-            padding: 50px 20px;
-            border-radius: 25px;
-            border: 3px solid magenta;
-            font-family: 'Oswald', sans-serif;
-            font-family: 'Trispace', sans-serif;
-
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            font-family: 'Oswald', sans-serif;
-            font-family: 'Trispace', sans-serif;
-        }
-
-        p input {
-            font-size: 21px;
-            color: black;
-            font-family: monospace;
-            padding: 10px 20px;
-            border: 2px solid rgb(0, 0, 0);
-            border-radius: 12px;
-            margin: 13px;
-            box-shadow: 2px 5px 5px rgb(0, 0, 0);
-            transition: .6s;
-        }
-
-        p input:hover {
-            box-shadow: 2px 5px 4px rgb(132, 0, 165);
-        }
-
-        p input[type="submit"] {
-            background-color: rgb(0, 0, 0);
-            color: white;
-            transition: 0.5s;
-
-        }
-
-        p input[type="radio"] {
-            color: black;
-            font-size: 35px !important;
-            font-weight: bold;
-
-        }
-
-        #aaa {
-            color: rgb(0, 0, 0) !important;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 23px;
-
-        }
-
-        p input[type="submit"]:hover {
-            background-color: rgb(255, 255, 255);
-            color: black;
-            cursor: pointer;
-        }
-
-        ::placeholder {
-            color: blueviolet;
-        }
-
-        label:hover {
-            cursor: pointer;
-        }
-    </style>
+    
 </head>
 
 <body>
     <form method="post" action="./backend.php">
-        <h3>Please Fill Up The Register Form <br> <br> </h3>
+        <h3 style="font-family:monospace;">Please Fill Up The Register Form <br> <br> </h3>
         <p id="aaa">
             I Am <br>
             <label for="doctor"><input type="radio" name="mediname" id="doctor">DOCTOR</label>
