--- a/view-reports.html
+++ b/view-reports.html
@@ -4,20 +4,38 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Patients login</title>
+    <title>WeCare-PatientView</title>
+
+    <!-- full page css under one single file bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- fontawesone icon link here  -->
     <script src="https://kit.fontawesome.com/78e6212ab3.js" crossorigin="anonymous"></script>
+
+    <!-- favicon link here  -->
+    <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
+
+    <!-- custom css little bit  -->
     <style>
         .nav-link .px-2 .link-light .fs-5 .ddd {
             color: purple !important;
         }
+        main{
+            background-image: url(./images/h.jpg);
+            margin-top: 0px;
+        }
+        .album{
+            background-color:azure;
+        }
     </style>
 </head>
 
+
 <body>
 
-    <header class="p-3 mb-3 border-bottom bg-success">
+    <header class="p-3 border-bottom bg-success">
         <div class="container">
+
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
                     <a class="navbar-brand fw-bold fs-3" href="#">We<i class="fa-solid fa-circle-nodes"></i>Care</a>
@@ -67,16 +85,102 @@
                         you!!!!!!!
                     </p>
                     <p>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-plus"></i>More About Us</button>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-dollar"></i>Want To Contribute...?*</button>
+                        <button type="button" class="btn  btn-success" data-bs-toggle="popover" title="WeCare"
+                            data-bs-content="It is the most trustable and secure platform for storing and uploading medical reports . "
+                            data-bs-placement="left"><i class="fa-solid fa-plus"></i>More About Us</button>
+                        <button type="button" class="btn  btn-danger" data-bs-toggle="popover" title="Esewa"
+                            data-bs-content="Our Esewa id is 9866134804. Thank Your For your contribution . 
+                            We will remark it as a precious help   :)   "><i class="fa-solid fa-dollar"></i>Want To
+                            Contribute...?*</button>
                         <!-- <button type="button" class="btn btn-outline-danger">Danger</button> -->
                     </p>
                 </div>
             </div>
         </section>
 
-        <div class="album py-5 bg-light">
+        <div class="album py-5 ">
             <div class="container">
+
+                <!-- popups models starts from here -->
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Medical Report No 1 </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="card mb-3">
+                                    <img src="./images/born-baby.jpg" height="600px" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Future Engineer</h5>
+                                      <p class="card-text">“The difference between ordinary and extraordinary is that little extra And He is the one " --WeCare</p>
+
+
+                                      <!-- all reports here  -->
+
+                                      <form>
+                                        <div class="form-group mt-3 ">
+                                          <label for="exampleFormControlInput1">Patients's Email address</label>
+                                          <input type="email" class="form-control border border-2 border-success" id="exampleFormControlInput1" placeholder="name@example.com" readonly>
+                                        </div>
+                                        <div class="form-group mt-3" aria-readonly="readonly">
+                                          <label for="exampleFormControlSelect1">Witness(साक्षी) if Any </label>
+                                          <select class="form-control border border-2 border-success" id="exampleFormControlSelect1" readonly>
+                                            <option>No-one</option>
+                                            <option>Father</option>
+                                            <option>Mother</option>
+                                            <option>Sister</option>
+                                            <option>Brother</option>
+                                            <option>Friends</option>
+                                            <option>Staff</option>
+                                            <option>Other</option>
+                                          </select>
+                                        </div>
+                                  
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlTextarea1">Symptoms Of The Patient</label>
+                                          <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1" rows="5" readonly></textarea>
+                                        </div>
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlTextarea1">Description Of The Disease</label>
+                                          <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1" rows="7" readonly></textarea>
+                                        </div>
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlTextarea1">Description Of Medicines</label>
+                                          <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1" rows="5" readonly></textarea>
+                                        </div>
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlTextarea1">Necessary Medical Reports</label>
+                                          <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1" rows="5" readonly></textarea>
+                                        </div>
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlTextarea1">Instruction Regarding Diet</label>
+                                          <textarea class="form-control border border-2 border-success" id="exampleFormControlTextarea1" rows="5" readonly></textarea>
+                                        </div>
+                                        <div class="form-group mt-3">
+                                          <label for="exampleFormControlInput1">Next Visit Date</label>
+                                          <input type="datetime-local" class="form-control border border-2 border-success" id="exampleFormControlInput1" placeholder="dd/mm/yyyy" readonly>
+                                        </div>
+
+                                      </form>
+
+                                      <!-- all reports end here  -->
+
+                                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    </div>
+                                  </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Understood</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
@@ -91,7 +195,8 @@
                                     content. This content is a little bit longer.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="#" class="btn btn-success my-2"><i class="fa-solid fa-plus"></i>View
+                                        <a href="#" class="btn btn-success my-2" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal"><i class="fa-solid fa-plus"></i>View
                                             More</a>
                                     </div>
                                     <small class="text-muted">9 mins</small>
@@ -274,6 +379,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+    </script>
 </body>
 
 </html>
