--- a/first.html
+++ b/first.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./first.css">
     <title>WeCare-Interface</title>
     <style>
-       footer{
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-weight: bold;
-       }
+        footer {
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -31,7 +31,7 @@
                 </div>
 
                 <!-- doctor ko form : post method ma  -->
-                <form action="" method="post">
+                <form action="./php/logind.php" method="post">
                     <p>
                         <input type="text" name="dname" id="dname" placeholder="Username">
                     </p>
@@ -39,13 +39,14 @@
                         <input type="password" name="dpass" id="dpass" placeholder="Password">
                     </p>
                     <p>
-                        <a href="#">
-                            <input type="submit" value="LogIn">
-                        </a>
+
+                        <input name="submit" type="submit" value="LogIn">
+
                         <a href="#">
                             <input type="button" value="Forget Password">
                         </a>
                     </p>
+
                 </form>
 
             </div>
@@ -53,11 +54,12 @@
 
 
 
+
             <!-- register wala start -->
             <div class="register-here">
                 <p>Don't have any account</p>
-                <a href="">
-                    <input type="button" value="Register Now">
+                <a href="./Register.html">
+                    <input type="button" class="btn btn-success" value="Register Now">
                 </a>
 
             </div>
@@ -95,9 +97,53 @@
         </div>
     </div>
 
+    <!-- popup wala  line  -->
+    <div class="popup">
+        <img src="./images/error.png" alt="">
+        <h2>Error</h2>
+        <p>You have successfully submitted your details . I will help your further. How can i help you further , you can
+            directly inform me in the sense of that is </p>
+        <button type="button" class="btnn">OK</button>
+    </div>
+    <!-- popup end here -->
+
+
+    <!-- ******************popup start from here*************** -->
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ***************popup end here ***************** -->
+
+
+
+
     <!-- buttom bavbar start from here  -->
 
-    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark" style="background-color: purple;">
+    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark" style="background-color: green;">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="#">We<i class="fa-solid fa-circle-nodes"></i>Care</a>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
